# dwts_backend

./: .env  .pre-commit-config.yaml  Dockerfile_backend_api  docker_run_test.sh  pyproject.toml
src/: celery_worker_entrypoint.sh  run_tests.sh
src/app/core/: startup.py
src/app/core/data/repo/: repo_service.py
src/app/core/search/simsearch/: index.py  simsearch_service.py
src/app/docprepro/simsearch/: preprocess.py
src/configs/: default_localhost_dev.yaml
src/test/api/endpoints/: test_general.py
src/test/app/util/: test_core_singleton_meta.py
