[tool.poetry]
name = "dwts_backend"
version = "0.1.0"
description = ""
authors = ["floschne <florian.schneider-1@uni-hamburg.de>"]

[tool.poetry.dependencies]
python = "^3.9.7"
spacy = "^3.2.3"
click = "8.0.4"
fastapi = "^0.75.0"
SQLAlchemy = "^1.4.32"
SQLAlchemy-Utils = "^0.38.2"
python-multipart = "^0.0.5"
frozendict = "^2.3.0"
pydantic = { version = "1.8.2", extras = ["email"] }
psycopg2 = "^2.9.3"
redis = "^4.2.0"
celery = "^5.2.3"
loguru = "^0.6.0"
omegaconf = "^2.1.1"
uvicorn = "^0.17.6"
langdetect = "^1.0.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
mypy = "^0.942"
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pre-commit = "^2.18.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

