[tool.poetry]
name = "dwts_backend"
version = "0.1.0"
description = ""
authors = ["floschne <florian.schneider-1@uni-hamburg.de>"]

[tool.poetry.dependencies]
python = "^3.9.7" # all
spacy = "^3.2.3"  # text worker
click = "8.0.4" # all
fastapi = "^0.75.0"  # api
SQLAlchemy = "^1.4.32" # all
SQLAlchemy-Utils = "^0.38.2" # all
python-multipart = "^0.0.5" # api
frozendict = "^2.3.0" # all
pydantic = {version = "1.8.2", extras = ["email"]} # all
psycopg2 = "^2.9.3" # all
redis = "^4.2.0" # all
celery = "^5.2.3" # all
loguru = "^0.6.0" # all
omegaconf = "^2.1.1" # all
uvicorn = "^0.17.6" # api
langdetect = "^1.0.9" # text worker
python-jose = "^3.3.0" # api
passlib = "^1.7.4" # api
Pillow = "^9.1.0" # image worker
transformers = "^4.18.0" # text + image worker
torch = {version = "^1.11.0", platform = "linux"} # text + image worker
timm = {version = "^0.5.4", platform = "linux"} # image worker
elasticsearch = "7.17" # api + text worker
python-magic = "^0.4.25" # all

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

